# IT-project

./: .env  AddOlympiad.js  App.js  App.test.js  AppCal.tsx  Home.js  HorizontalLine.css  HorizontalLine.js  LogIn.js  LogInButton.css  LogInButton.js  LogOutButton.js  RegisterButton.css  RegisterForm.js  RegisterIcon.css  RegisterIcon.js  RegisterModal.js  ReturnToHome.css  ReturnToHome.js  UnLogInButton.css  UnLogInButton.js  UserCalendar.css  UserCalendar.js  UserHome.js  admin.py  config.py  database.py  database_start.py  dependencies.py  index.js  main.py  models.py  orm.py  parser.py  pyproject.toml
database/: __init__.py  crud.py  db.py  main.py  models.py
fast_api/: dependencies.py  main.py  schemas.py
fast_api/routers/: __init__.py  auth.py  olimpiads.py  users.py
front/Front/: все пишем на реакт.jsx  начало.html
front/Front/css/: дезигне.css
routers/: __init__.py  admin.py  auth.py  users.py
schemas/: __init__.py  event.py  filter.py  user.py
