[tool.poetry]
name = "fastapiproject3"
version = "0.1.0"
description = ""
authors = ["aaayyywww <andrewrumih@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
psycopg = {extras = ["all"], version = "^3.1.18"}
psycopg-binary = "^3.1.18"
email-validator = "^2.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^42.0.5"
python-jose = "^3.3.0"
multipart = "^0.2.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
